Removed bg and fix name overflow in teams section

--- a/src/components/teams/Animation.css
+++ b/src/components/teams/Animation.css
@@ -107,3 +107,6 @@
     display: block;
     margin-top: 5px;
 }
+.details{
+    overflow-y: auto;
+}
